objects/kugo2p__Processor_Connection__c.object
<CustomObject>
    <description>Kugamon - Related object to Payment Settings. For Admin use only.</description>
    <fields>
        <fullName>kugo2p__API_Password__c</fullName>
        <description>Password for API transactions</description>
        <inlineHelpText>Password for API transactions</inlineHelpText>
        <label>API Password</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__API_Username__c</fullName>
        <description>Username for API transactions</description>
        <inlineHelpText>Username for API transaction</inlineHelpText>
        <label>API Username</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Account_Type__c</fullName>
        <inlineHelpText>Payment processor account type.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>kugo2p__Processor_Id__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Website Payments Pro</fullName>
                </value>
                <value>
                    <fullName>Website Payments Standard</fullName>
                </value>
                <value>
                    <fullName>AU XML</fullName>
                </value>
                <value>
                    <fullName>AU XML (CVN)</fullName>
                </value>
                <value>
                    <fullName>AU Shared</fullName>
                </value>
                <value>
                    <fullName>AU Shared (CVN)</fullName>
                </value>
                <value>
                    <fullName>NZ Shared</fullName>
                </value>
                <value>
                    <fullName>UK Shared</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Assigned_to_Terminal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to enable this payment processor connection in the payment terminal.</inlineHelpText>
        <label>Assigned to Terminal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AuthNet_Direct_Response_Delim__c</fullName>
        <label>AuthNet Direct Response Delimiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>|</fullName>
                    <default>true</default>
                    <label>|</label>
                </value>
                <value>
                    <fullName>&apos;</fullName>
                </value>
                <value>
                    <fullName>&quot;</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>,</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__AuthNet_Enable_Echecks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AuthNet Enable Echecks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AuthNet_Login_Id__c</fullName>
        <label>AuthNet API Login Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__AuthNet_Trans_Key__c</fullName>
        <label>AuthNet Transaction Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Auto_Attach_Products__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Automatically connect Product records to new shopping cart items using the product code.</inlineHelpText>
        <label>Connect Products to Cart Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Auto_Attach__c</fullName>
        <inlineHelpText>Determines which methods of auto-attaching records will be used for transactions originating outside of Salesforce.</inlineHelpText>
        <label>Auto Attach</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact using PayPal Payer Id</fullName>
                </value>
                <value>
                    <fullName>Contact using email</fullName>
                </value>
                <value>
                    <fullName>Order and Invoice Name</fullName>
                    <default>true</default>
                    <label>Order and Invoice Name</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Auto_Create_Account__c</fullName>
        <inlineHelpText>When auto-creating contacts - this setting determines whether an account should also be created.  &apos;Individual Accounts&apos; are accounts given the same name as the Contact and marked &apos;Convert To Person Account&apos; so they can be batch converted later.</inlineHelpText>
        <label>Auto-Create Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Default Account</fullName>
                </value>
                <value>
                    <fullName>Create Individual Account</fullName>
                </value>
                <value>
                    <fullName>Create Business Account</fullName>
                </value>
                <value>
                    <fullName>Create Individual or Business Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Auto_Create_Cart_Items__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Automatically add shopping cart items when receiving a new payment notification with cart item data.</inlineHelpText>
        <label>Auto Create Shopping Cart Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Auto_Create_Contacts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Create a new contact (using transaction details) if the external transaction cannot be matched up with an existing contact in Salesforce.</inlineHelpText>
        <label>Auto-Create Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Default_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Account to use when auto-creating Contacts</inlineHelpText>
        <label>Default Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Processor Connections</relationshipLabel>
        <relationshipName>Processor_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Default_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this connection is the default connection to use for shopping carts, donation pages, quote payment pages and other customer-facing interfaces.</inlineHelpText>
        <label>Default Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Default_Currency__c</fullName>
        <label>Default Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Description__c</fullName>
        <inlineHelpText>Description or notes about this payment processor account.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Direct_Response_Encaps__c</fullName>
        <description>The character that is used to encapsulate the fields in transaction responses from the payment processor.</description>
        <inlineHelpText>The character that is used to encapsulate the fields in transaction responses from the payment processor.</inlineHelpText>
        <label>Direct Response Encaps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>|</fullName>
                </value>
                <value>
                    <fullName>&quot;</fullName>
                </value>
                <value>
                    <fullName>&apos;</fullName>
                </value>
                <value>
                    <fullName>:</fullName>
                </value>
                <value>
                    <fullName>;</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>\</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Enabled_Card_Types__c</fullName>
        <inlineHelpText>Card types to show in payment terminal(s) using this processor connection.  If left empty, a default card type list will be displayed.</inlineHelpText>
        <label>Enabled Card Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__External_Transactions__c</fullName>
        <inlineHelpText>Preference for handling transactions coming from outside of Salesforce.  Auto Attach will attempt to auto-create relationships between the new payment record and orders and  invoices in your Salesforce instance.</inlineHelpText>
        <label>External Transactions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Attach</fullName>
                </value>
                <value>
                    <fullName>Leave Unattached</fullName>
                </value>
                <value>
                    <fullName>Discard</fullName>
                    <default>true</default>
                    <label>Discard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Google_Merchant_Id__c</fullName>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Google_Merchant_Key__c</fullName>
        <inlineHelpText>Used for eWay API Key</inlineHelpText>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Installation_Id__c</fullName>
        <inlineHelpText>WorldPay Installation Id</inlineHelpText>
        <label>Installation Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Merchant_Id__c</fullName>
        <description>Merchant ID assigned to you by the payment processor.</description>
        <inlineHelpText>Merchant ID assigned to you by the payment processor.</inlineHelpText>
        <label>Merchant Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Notification_Relay_Method__c</fullName>
        <label>Relay Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Orphaned_Payments__c</fullName>
        <inlineHelpText>This setting determines what should be done with external transactions that cannot be matched.</inlineHelpText>
        <label>Unattached External Transactions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Discard</fullName>
                    <default>true</default>
                    <label>Discard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PDF_Checkout__c</fullName>
        <label>PDF Checkout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Native</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PP_API_Password__c</fullName>
        <label>PayPal API Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PP_API_Signature__c</fullName>
        <label>PayPal API Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PP_API_Username__c</fullName>
        <label>PayPal API Username</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PP_Merchant_Id__c</fullName>
        <inlineHelpText>PayPal assigned merchant Id.  Used to build buy-now buttons and similar shopping links in visual force.</inlineHelpText>
        <label>PayPal Merchant Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentConnect_Setup__c</fullName>
        <label>Payment Settings</label>
        <referenceTo>kugo2p__Settings__c</referenceTo>
        <relationshipLabel>Processor Connections</relationshipLabel>
        <relationshipName>Processor_Connections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__Post_Verification_Code__c</fullName>
        <inlineHelpText>Used for either  Authorize.Net MD5 hash value, WorldPay Payment Response Password, or eWay XML Refund Password</inlineHelpText>
        <label>Verification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Processor_Id__c</fullName>
        <label>Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PayPal</fullName>
                    <default>true</default>
                    <label>PayPal</label>
                </value>
                <value>
                    <fullName>Authorize.Net</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>WorldPay</fullName>
                </value>
                <value>
                    <fullName>eWay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Relay_Id__c</fullName>
        <inlineHelpText>Used to match notifications passing through the relay with the correct processor connection record.  For visualforce relay scripts this is the page name of the relay.  For api relays, this Id is set in the relay&apos;s configuration file.</inlineHelpText>
        <label>Relay Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Relay_Script__c</fullName>
        <label>Relay Script</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Site_Checkout__c</fullName>
        <description>Determines the type of checkout offered in Sites - Native (API), Redirect (hosted at the processor)</description>
        <inlineHelpText>Determines the type of checkout offered in Sites - Native (API), Redirect (hosted at the processor)</inlineHelpText>
        <label>Online Checkout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Native</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a connection to a test or sandbox account.</inlineHelpText>
        <label>Test Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Tokenized_Card_Service_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if tokenized card services are enabled for this processor (e.g. Authorize.Net CIM)</description>
        <inlineHelpText>Check if tokenized card services are enabled for this processor (e.g. Authorize.Net CIM)</inlineHelpText>
        <label>Stored Card Service Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Verify_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If enabled, requires that each notification pass a verification check before processing.</inlineHelpText>
        <label>Verify Notifications</label>
        <type>Checkbox</type>
    </fields>
    <label>Processor Connection</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processor Connections</pluralLabel>
    <recordTypes>
        <fullName>kugo2p__Authorize_Net</fullName>
        <active>true</active>
        <label>Authorize.Net</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__PayPal</fullName>
        <active>true</active>
        <label>PayPal</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__WorldPay</fullName>
        <active>true</active>
        <label>WorldPay</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__eWay</fullName>
        <active>true</active>
        <label>eWay</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__Check_Assign_to_Terminal</fullName>
        <active>true</active>
        <description>Prevents users from checking the Assign to Terminal box for certain account types.</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(kugo2p__Account_Type__c, &quot;Website Payments Standard&quot;),  
ISPICKVAL(kugo2p__Account_Type__c, &quot;eWay NZ&quot;),
ISPICKVAL(kugo2p__Account_Type__c, &quot;eWay UK&quot;)),
kugo2p__Assigned_to_Terminal__c  = true)</errorConditionFormula>
        <errorDisplayField>kugo2p__Assigned_to_Terminal__c</errorDisplayField>
        <errorMessage>Assigned to Terminal cannot be check for this account type.  Native terminal transaction are not supported.</errorMessage>
    </validationRules>
</CustomObject>